# python-running-performance

./: .gitignore  .travis.yml  LICENSE  LICENSE.md  Makefile  Pipfile  README.md  setup.cfg  setup.py
running_performance/: __init__.py  cameron.py  exceptions.py  purdy.py  riegel.py  vo2max.py
tests/: conftest.py  test_cameron.py  test_purdy.py  test_riegel.py  test_vo2max.py
