[flake8]
max-line-length = 119

[metadata]
name = running_performance
author = Christian Wygoda
author_email = info@wygoda.net
description = Running performance indicators and predictors
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords =
    Purdy Points
    VO2 Max
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
url = https://github.com/sweat-pain-data/python-running-performance

[options]
packages = find:
setup_requires =
    setuptools_scm